--- a/themes/hello-friend-trx/assets/scss/_list.scss
+++ b/themes/hello-friend-trx/assets/scss/_list.scss
@@ -125,31 +125,3 @@
     }
   }
 }
-
-.post-authors {
-  display: flex;
-  width: 100%;
-  align-items: flex-start;
-
-  &__label {
-    flex: 0 0 auto;
-    white-space: nowrap;
-  }
-
-  &__names {
-    display: inline-block;
-    flex: 1 1 0;
-    min-width: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    & .author-link {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.25em;
-      flex: 0 0 auto;
-      white-space: nowrap;
-    }
-  }
-}
